force-app/main/default/objects/Entitlement/fields/ContractMainteCrmID__c.field-meta.xml
<CustomField>
    <fullName>ContractMainteCrmID__c</fullName>
    <description>This field is used to store the id service menu id from ServAir</description>
    <label>ContractMainteCrmID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>