force-app/main/default/objects/Entitlement/fields/Entitlement_balance__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_balance__c</fullName>
    <label>Entitlement balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>