force-app/main/default/objects/Entitlement/fields/Entitlement_quantity__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_quantity__c</fullName>
    <label>Entitlement quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>