force-app/main/default/objects/Entitlement/fields/Entitlement_type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_type__c</fullName>
    <description>This field is used to store the entitlement type of service contract</description>
    <label>Entitlement type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>