force-app/main/default/objects/Entitlement/fields/Per__c.field-meta.xml
<CustomField>
    <fullName>Per__c</fullName>
    <label>/Per</label>
    <length>255</length>
    <type>Text</type>
</CustomField>